force-app/main/default/objects/Country__c/fields/Country_ISO_code_2__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_code_2__c</fullName>
    <externalId>true</externalId>
    <label>Country ISO code 2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>