force-app/main/default/objects/Country__c/fields/Country_ISO_code_3__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_code_3__c</fullName>
    <externalId>true</externalId>
    <label>Country ISO code 3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>